# LaPostePython

./: LICENSE  README.md  pyproject.toml
docs/: index.rst  user-guide.rst
src/LaPosteAPI/: LaPoste.py  LaPosteExeptions.py  __init__.py
src/laposte/: LaPoste.py  __init__.py
tests/: test.py
