[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "laposte"
version = "0.1.5"
authors = [
  { name="ldx", email="fr.ldxdev@gmail.com" },
]
description = "La Poste API in Python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'requests'
]

[project.urls]
"Homepage" = "https://github.com/444ldx/la_poste_python"
"Bug Tracker" = "https://github.com/444ldx/la_poste_python/issues"
"Code" = "https://github.com/444ldx/la_poste_python"